<resources>
    <string name="app_name">SnapMoo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="scan_menu">Scan Menu</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_success">Logout success!</string>
    <string name="camera_permission_request_granted">Camera permission request granted!</string>
    <string name="camera_permission_request_denied">Camera permission request denied!</string>
    <string name="predict_success">Image prediction successful!</string>
    <string name="predict_failed">Image prediction failed!</string>
    <string name="location_found">Location is found.</string>
    <string name="location_not_found">Location is not found. Try enabling GPS!</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="login_success">Login Success!</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="phonenumber_cannot_be_empty">Phone number cannot be empty</string>
    <string name="cropped_image_uri_is_null">Cropped image URI is null</string>
    <string name="failed_to_crop_the_image">Failed to crop the image.</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="address_cannot_be_empty">Address cannot be empty</string>
    <string name="city_cannot_be_empty">City cannot be empty</string>
    <string name="province_cannot_be_empty">Province cannot be empty</string>
    <string name="please_fill_in_the_number_of_cattle_you_have">Please fill in the number of cattle you have</string>
    <string name="positive_step_handling">"\n1. Isolate FMD infected cattle to prevent transmission of the virus to other livestock.\n2. Give vitamin and ATP supplement\n3. Give Antipyretic (reduce body temperature) and Analgesic (reduce pain)\n4. Encourage infected cattle to keep eating even if appetite decreases\n5. Give medicine and vitamins repeatedly until the cow recovers\n                    "</string>
    <string name="positive_description">"\n                        Oops! Your cow has FMD 😥\n                        Based on the picture you uploaded, the cow has Foot and Mouth Disease (FMD). You can follow the tips below to prevent the disease from spreading further.\n                    "</string>
    <string name="positive_additional_desc">"\n                        Don't panic and worry! You can do the above treatments then do regular maintenance and check the condition of the cattle by utilizing the SnapMoo app!\n                    "</string>
    <string name="negative_step_handling">"\n1. Maintain feed quality\n2. Maintain cleanliness of the cage environment\n3. Maintain the immune system of livestock\n                    "</string>
    <string name="negative_description">"\nWow, your cow is not infected with FMD!\nLet's apply these tips to maintain cattle health and avoid FMD!\n                    "</string>
    <string name="negative_additional_desc">"\n                        Maintain your cow's health by regularly checking the cow's condition. You can use the scan feature on the SnapMoo application regularly!\n                        "</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="total_cattle">Total Cattle</string>
    <string name="created_at">Created At</string>
    <string name="condition_of_the_cattle">Condition of The Cattle</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="foot_cases">Foot Cases</string>
    <string name="symptoms_of_fmd_in_the_foot">Symptoms of FMD in the Foot</string>
    <string name="_1">1</string>
    <string name="nail_sores">Nail Sores:</string>
    <string name="open_sores_and_inflammation_around_the_nail_the_area_around_the_nail_looks_red_swollen_and_inflamed_these_open_wounds_can_be_caused_by_trauma_infection_or_other_health_conditions_from_the_open_wound_there_is_often_a_discharge_of_pus_or_exudate_indicating_that_an_infection_has_occurred">Open sores and inflammation around the nail. The area around the nail looks red, swollen, and inflamed. These open wounds can be caused by trauma, infection, or other health conditions. From the open wound, there is often a discharge of pus or exudate indicating that an infection has occurred.</string>
    <string name="_2">2</string>
    <string name="blisters_and_erosions">Blisters and Erosions:</string>
    <string name="a_blister_bursts_and_becomes_an_erosion_of_the_skin_around_the_nail_a_blister_caused_by_friction_or_infection_contains_clear_fluid_or_pus_when_the_blister_bursts_it_leaves_an_area_of_erosion_that_is_prone_to_infection_erosions_are_often_found_in_the_area_between_the_toes_interdigital_where_moisture_and_friction_are_more_common">A blister bursts and becomes an erosion of the skin around the nail. A blister, caused by friction or infection, contains clear fluid or pus. When the blister bursts it leaves an area of erosion that is prone to infection. Erosions are often found in the area between the toes (interdigital), where moisture and friction are more common.</string>
    <string name="_3">3</string>
    <string name="swelling">Swelling</string>
    <string name="swelling_around_the_nail_area_swelling_edema_occurs_due_to_the_accumulation_of_fluid_in_the_tissues_around_the_nail_this_area_appears_enlarged_shiny_and_may_feel_warm_to_the_touch_swelling_may_cause_discomfort_and_interfere_with_the_normal_functioning_of_the_foot">Swelling around the nail area. Swelling (edema) occurs due to the accumulation of fluid in the tissues around the nail. This area appears enlarged, shiny, and may feel warm to the touch. Swelling may cause discomfort and interfere with the normal functioning of the foot.</string>
    <string name="_4">4</string>
    <string name="difficulty_walking">Difficulty Walking:</string>
    <string name="animals_show_difficulty_walking_and_obvious_pain_when_walking_they_may_limp_avoid_using_the_affected_leg_or_show_obvious_pain_when_the_affected_leg_touches_the_ground">Animals show difficulty walking and obvious pain when walking. They may limp, avoid using the affected leg, or show obvious pain when the affected leg touches the ground.</string>
    <string name="the_above_symptoms_can_be_caused_by_various_conditions_such_as_bacterial_or_fungal_infections_physical_trauma_allergies_or_systemic_diseases">The above symptoms can be caused by various conditions such as bacterial or fungal infections, physical trauma, allergies, or systemic diseases.</string>
    <string name="treatment_of_fmd_symptoms_in_the_foot">Treatment of FMD Symptoms in the Foot</string>
    <string name="cleaning_the_wound_with_an_antiseptic_to_prevent_further_infection">Cleaning the wound with an antiseptic to prevent further infection.</string>
    <string name="administering_appropriate_antibiotics_or_antifungals_based_on_the_cause_of_infection">Administering appropriate antibiotics or antifungals based on the cause of infection.</string>
    <string name="protecting_the_wound_from_dirt_and_reducing_the_risk_of_infection_by_using_a_bandage_or_wound_dressing">Protecting the wound from dirt and reducing the risk of infection by using a bandage or wound dressing.</string>
    <string name="consultation_with_a_veterinarian_or_fmd_task_force_for_proper_diagnosis_and_effective_treatment">Consultation with a veterinarian or FMD Task Force for proper diagnosis and effective treatment.</string>
    <string name="consult_a_veterinarian_for_a_proper_diagnosis_and_appropriate_treatment_recommendations">Consult a veterinarian for a proper diagnosis and appropriate treatment recommendations.</string>
    <string name="_5">5</string>
    <string name="welcome_back_to">Welcome Back to</string>
    <string name="snap">Snap</string>
    <string name="moo">Moo</string>
    <string name="sign_in_to_protect_your_cattle">Sign in to Protect Your Cattle</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="mouth_cases">Mouth Cases</string>
    <string name="symptoms_of_fmd_in_the_mouth">Symptoms of FMD in the Mouth</string>
    <string name="blisters_on_gums_and_tongue">Blisters on Gums and Tongue:</string>
    <string name="there_are_blisters_that_burst_into_sores_on_the_gums_and_tongue_these_blisters_are_filled_with_fluid_which_is_very_painful_for_the_animal_after_some_time_the_blisters_burst_and_turn_into_open_wounds_which_are_also_prone_to_infection">There are blisters that burst into sores on the gums and tongue. These blisters are filled with fluid which is very painful for the animal. After some time, the blisters burst and turn into open wounds which are also prone to infection.</string>
    <string name="excessive_saliva_production_this_excessive_saliva_is_usually_thick_in_texture_and_can_be_seen_dripping_continuously_from_the_animal_s_mouth_this_occurs_due_to_irritation_and_sores_in_the_mouth_that_stimulate_the_salivary_glands_to_produce_more_saliva_as_a_pain_response">Excessive saliva production. This excessive saliva is usually thick in texture and can be seen dripping continuously from the animal\'s mouth. This occurs due to irritation and sores in the mouth that stimulate the salivary glands to produce more saliva as a pain response.</string>
    <string name="difficulty_eating">Difficulty Eating:</string>
    <string name="cattle_show_difficulty_and_pain_when_eating_animals_infected_with_fmd_often_show_signs_of_feeding_difficulties_such_as_chewing_slowly_stopping_frequently_while_eating_refusing_food_and_loss_of_appetite">cattle show difficulty and pain when eating. Animals infected with FMD often show signs of feeding difficulties, such as chewing slowly, stopping frequently while eating, refusing food, and loss of appetite.</string>
    <string name="unpleasant_mouth_odor">Unpleasant Mouth Odor:</string>
    <string name="strong_unpleasant_bad_breath_this_odor_is_caused_by_bacteria_that_multiply_around_wounds_and_dead_tissue_as_well_as_metabolic_products_produced_by_the_bacteria_this_bad_breath_is_a_sign_that_there_is_a_serious_infection_in_the_animal_s_mouth">Strong, unpleasant bad breath. This odor is caused by bacteria that multiply around wounds and dead tissue, as well as metabolic products produced by the bacteria. This bad breath is a sign that there is a serious infection in the animal\'s mouth..</string>
    <string name="treatment_of_fmd_symptoms_in_the_mouth">Treatment of FMD Symptoms in the Mouth</string>
    <string name="isolate_infected_animals_to_prevent_the_spread_of_the_virus_to_other_animals">Isolate infected animals to prevent the spread of the virus to other animals</string>
    <string name="join_to">Join to</string>
    <string name="start_protecting_your_cattle_today">Start Protecting Your Cattle Today</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="register">Register</string>
    <string name="language">Language</string>
    <string name="clear_cache">Clear cache</string>
    <string name="help_and_support">Help and Support</string>
    <string name="log_out">Log out</string>
</resources>