<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_icon_home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/bottom_icon_search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_scan"
        android:enabled="false"
        android:title=" " />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/bottom_icon_report"
        android:title="@string/report" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_icon_profile"
        android:title="@string/profile" />
</menu>