<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.setting.SettingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="12dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/view_language"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_bg_outline">

                <ImageView
                    android:id="@+id/iv_imageLanguage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="Language"
                    android:src="@drawable/icon_setting_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_language"
                    style="@style/Heading3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/language"
                    android:textColor="@color/silver_700"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_imageLanguage"
                    app:layout_constraintStart_toEndOf="@+id/iv_imageLanguage"
                    app:layout_constraintTop_toTopOf="@+id/iv_imageLanguage" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arrow_right" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_bg_outline">

                <ImageView
                    android:id="@+id/iv_image_clear_cache"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="clear_cache"
                    android:src="@drawable/icon_setting_notification"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_bookmark"
                    style="@style/Heading3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/clear_cache"
                    android:textColor="@color/silver_700"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_image_clear_cache"
                    app:layout_constraintStart_toEndOf="@+id/iv_image_clear_cache"
                    app:layout_constraintTop_toTopOf="@+id/iv_image_clear_cache" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arrow_right" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_help"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_bg_outline">

                <ImageView
                    android:id="@+id/iv_imageHelp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="Help and Suport"
                    android:src="@drawable/icon_setting_helpsupport"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_help"
                    style="@style/Heading3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/help_and_support"
                    android:textColor="@color/silver_700"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_imageHelp"
                    app:layout_constraintStart_toEndOf="@+id/iv_imageHelp"
                    app:layout_constraintTop_toTopOf="@+id/iv_imageHelp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arrow_right" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_logout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/custom_bg_outline">

                <ImageView
                    android:id="@+id/iv_imageLogout"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="Log out"
                    android:src="@drawable/icon_leave"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_logout"
                    style="@style/Heading3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/log_out"
                    android:textColor="@color/silver_700"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_imageLogout"
                    app:layout_constraintStart_toEndOf="@+id/iv_imageLogout"
                    app:layout_constraintTop_toTopOf="@+id/iv_imageLogout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arrow_right" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>